dropdown icon alignment fix

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -996,6 +996,7 @@ input.mdc-radio__native-control:focus,
     .mat-mdc-form-field-infix {
       padding: 0 !important;
       min-height: 0;
+      width: 93%;
     }
   }
 }
